# pico-demo1

./: Cargo.toml  README.md
blinky-embassy/: Cargo.toml  README.md
blinky-embassy/src/: main.rs
demo1/: README.md
demo1-embassy/: Cargo.toml  README.md  rust-toolchain.toml
demo1-embassy/src/: display.rs  hardware.rs  main.rs  utils.rs
display-basic/: Cargo.toml
display-basic/.cargo/: config.toml
display-embassy/: Cargo.toml  rust-toolchain.toml
display-embassy/src/: hardware.rs  main.rs
schematics/: demo1.kicad_prl  demo1.kicad_pro  demo1.kicad_sch
spi-display-embassy/: Cargo.toml  README.md
spi-display-embassy/src/: display.rs  main.rs
src/: main.rs
wifi-example/: Cargo.toml  README.md
wifi-example/src/: display.rs  main.rs  wifi_spi.rs
