[package]
edition = "2021"
name = "demo1-embassy"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-graphics = "0.7.1"
ili9341 = "0.5.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
profont = "0.6.1"

[profile.release]
debug = 2
