[package]
edition = "2021"
name = "demo1-embassy"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-graphics = "0.8.1"
ili9341 = "0.6.0"
display-interface = "0.5.0"
profont = "0.7.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 2
