[package]
edition = "2021"
name = "display-embassy"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-graphics = "0.8.1"
ili9341 = "0.6.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
profont = "0.7.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "15c3ae8ef6abaf37704e3278a1de6b2ae259aa15" }

[profile.release]
debug = 2
