[package]
edition = "2021"
name = "spi-display-embassy"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.6"
embedded-graphics = "0.7.1"
ili9341 = "0.5.0"
display-interface = "0.4.1"
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = [
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "aea5a0fd96c1901403e62bac5c1890debd41d22e", features = [
  "defmt",
  "unstable-traits",
  "nightly",
  "unstable-pac",
  "time-driver",
  "pio",
  "critical-section-impl",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }


# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
